Fix email link in contact information

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <h3>Visit our workshop</h3>
           <p>Cape Town</p>
           <p><strong>Open:</strong> Mon - Fri, 8am - 5pm</p>
-          <p><strong>Email:</strong> <a href="mailto:fitzvehiclerepairs.com">fitzvehiclerepairs.com@gmail.com</a></p>
+          <p><strong>Email:</strong> <a href="mailto:fitzvehicles.com">fitzvehiclerepairs.com@gmail.com</a></p>
           <p><strong>WhatsApp:</strong> <a href="https://wa.me/27797747784" target="_blank" rel="noopener noreferrer">+27 79 774 7784</a></p>
         </div>
       </div>
